--- a/src/AdminSite/appsettings.json
+++ b/src/AdminSite/appsettings.json
@@ -20,7 +20,11 @@
   //  "fulfillmentapiversion": "2018-08-31",
   //  "adauthenticationendpoint": "https://login.microsoftonline.com",
   //  "saasappurl": "",
-  //  "supportmeteredbilling": true
+  //  "supportmeteredbilling": true,
+  //  "provisionapibaseurl": "",
+  //  "provisionbranch": "saas-env/release",
+  //  "provisiontoken": "",
+  //  "provisionwebhooktoken": ""
   //},
   //"connectionstrings": {
   //  "defaultconnection": ""
