fixed deprovisioning, implemented guideline document, implemented workspace download.

--- a/src/Services/Services.csproj
+++ b/src/Services/Services.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.5.0" />
     <PackageReference Include="Marketplace.SaaS.Client" Version="1.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
