--- a/src/AdminSite/AdminSite.csproj
+++ b/src/AdminSite/AdminSite.csproj
@@ -39,6 +39,8 @@
   </ItemGroup>
 
   <ItemGroup>
+	<PackageReference Include="Azure.Storage.Blobs" Version="12.18.0" />
+	<PackageReference Include="Markdig" Version="0.32.0" />
 	<PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="6.0.1" />
 	<PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="6.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.DataProtection.Abstractions" Version="6.0.1" />
